--- a/app/src/main/res/layout/fragment_my_food.xml
+++ b/app/src/main/res/layout/fragment_my_food.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="93dp"
-        android:text="My Food fragment"
-        android:textColor="#000000"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/list"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
