--- a/app/src/main/res/layout/fragment_placeholder.xml
+++ b/app/src/main/res/layout/fragment_placeholder.xml
@@ -5,7 +5,11 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".activities.FoodActivity">
+
+    <!--
     tools:context=".activities.FoodActivity$PlaceholderFragment">
+    -->
 
     <TextView
         android:id="@+id/section_label"
