Changed APP to Model-View-ViewModel Design
Android Architecture Components implementation
- Added Room
- Added ViewModel
- Added LiveData

- Added repository

--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -29,8 +29,8 @@
         android:text="@string/food_list_sub_text"
         android:textColor="#000000"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/mainText"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mainText" />
 
     <TextView
         android:id="@+id/metaData"
