--- a/app/src/main/res/layout/food_item_cardview.xml
+++ b/app/src/main/res/layout/food_item_cardview.xml
@@ -15,7 +15,7 @@
             android:id="@+id/food_item_maintext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Main Text"
+            android:text="@string/main_text"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:maxLines="1"
             android:layout_alignParentStart="true"
@@ -25,7 +25,7 @@
             android:id="@+id/food_item_metatext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
+            android:text="@string/_1"
             android:layout_alignParentEnd="true"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/food_item_maintext"
-            android:text="subtext"/>
+            android:text="@string/subtext"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
