--- a/app/src/main/res/layout/fragment_my_food.xml
+++ b/app/src/main/res/layout/fragment_my_food.xml
@@ -11,4 +11,12 @@
         android:id="@+id/recycler_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="32dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
