--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp"
     android:paddingTop="8dp"
+    android:paddingEnd="16dp"
     android:paddingBottom="8dp">
 
     <TextView
-        android:id="@+id/mainText"
+        android:id="@+id/food_item_food_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:ellipsize="marquee"
         android:alpha="0.87"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:text="@string/food_list_main_text"
         android:textColor="#000000"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/subText"
+        android:id="@+id/food_item_brand_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0.6"
@@ -30,10 +32,10 @@
         android:textColor="#000000"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainText" />
+        app:layout_constraintTop_toBottomOf="@id/food_item_food_name" />
 
     <TextView
-        android:id="@+id/metaData"
+        android:id="@+id/food_item_meta_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="31dp"
@@ -42,6 +44,6 @@
         android:text="@string/food_list_main_text"
         android:textColor="#000000"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@id/mainText"
+        app:layout_constraintBottom_toBottomOf="@id/food_item_food_name"
         app:layout_constraintEnd_toEndOf="parent" />
- </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
