--- a/app/src/main/res/layout/add_food_activity.xml
+++ b/app/src/main/res/layout/add_food_activity.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AddFoodActivity">>
+    tools:context=".activities.AddFoodActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <!-- About the food -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:text="@string/about_the_food"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="72dp"
+        android:layout_marginStart="72dp"
         android:fontFamily="@font/roboto"
         android:textSize="16sp"
         android:letterSpacing="0.15"
@@ -44,6 +45,15 @@
             android:inputType="text"
             tools:ignore="Autofill" />
 
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/activity_add_food_spinner_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="72dp"
+            android:layout_marginRight="72dp">
+        </androidx.appcompat.widget.AppCompatSpinner>
+
+        <!-- Nutritional information-->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
