--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,14 @@
     <color name="colorPrimary">#0277bd</color>
     <color name="colorPrimaryDark">#004c8c</color>
     <color name="colorAccent">#42a5f5</color>
+
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="background">#B2000000</color>
+    <color name="half_black">#B2000000</color>
+    <color name="white">#B2000000</color>
+    <color name="white_pressed">#B2000000</color>
+    <color name="pink">#B2000000</color>
+    <color name="pink_pressed">#B2000000</color>
+    <color name="blue_semi_transparent">#B2000000</color>
+    <color name="blue_semi_transparent_pressed">#B2000000</color>
 </resources>
