--- a/app/src/main/res/menu/menu_food.xml
+++ b/app/src/main/res/menu/menu_food.xml
@@ -3,8 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="hochschule.de.bachelorthesis.activities.FoodActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_favorite"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="Delete"
+        android:icon="@drawable/ic_favorite_border_white_24dp"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_delete"
+        android:orderInCategory="100"
+        android:title="Delete"
+        android:icon="@drawable/ic_delete_white_24dp"
+        app:showAsAction="ifRoom" />
 </menu>
