--- a/app/src/main/res/layout/fragment_food_measurements.xml
+++ b/app/src/main/res/layout/fragment_food_measurements.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    android:orientation="vertical">
+    >
 
     <android:androidx.recyclerview.widget.RecyclerView
         android:id="@+id/food_measurments_recycler_view"
@@ -15,8 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="32dp"
-        android:layout_marginBottom="48dp"
-        android:src="@drawable/ic_add_white_24dp" />
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/ic_add_white_24dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
