--- a/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/src/main/res/layout/fragment_graphs.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="fragments_main_activity.GraphsFragment"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,7 +17,7 @@
         android:layout_marginTop="235dp"
         android:layout_marginEnd="95dp"
         android:layout_marginBottom="235dp"
-        android:text="Plan fragment"
+        android:text="Graph fragment"
         android:textColor="#000000"
         android:textSize="30dp"
         android:textStyle="bold"
