--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -8,25 +8,32 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nutreons"
+        android:text="User Data"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
+
+    <View
+        android:layout_height="2dip"
+        android:background="#FF909090" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:text="Personal data"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
     <TableRow>
 
         <TextView
             android:layout_column="1"
             android:padding="3dip"
-            android:text="Energy(kcal)"
+            android:text="Age"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
         <TextView
             android:gravity="right"
             android:padding="3dip"
-            android:text="55"
+            android:text="22"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
     </TableRow>
 
@@ -35,32 +42,13 @@
         <TextView
             android:layout_column="1"
             android:padding="3dip"
-            android:text="Energy (kJ)"
+            android:text="Height"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
         <TextView
             android:gravity="right"
             android:padding="3dip"
-            android:text="230"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow>
-
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Fat"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="0.3g"
+            android:text="176 cm"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
     </TableRow>
 
@@ -69,56 +57,13 @@
         <TextView
             android:layout_column="1"
             android:padding="3dip"
-            android:text="of which saturates"
+            android:text="Weight"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
         <TextView
             android:gravity="right"
             android:padding="3dip"
-            android:text="0mg"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-    <TableRow>
-
-        <View
-            android:layout_height="2dip"
-            android:background="#FF909090" />
-
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Protein"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="0.5g"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-    </TableRow>
-
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
-
-
-    <TableRow>
-
-        <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="Carbohydrates"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <TextView
-            android:gravity="right"
-            android:padding="3dip"
-            android:text="13.8g"
+            android:text="70 kg"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
     </TableRow>
 
@@ -127,37 +72,85 @@
         <TextView
             android:layout_column="1"
             android:padding="3dip"
-            android:text="of which sugars"
+            android:text="Gender"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
         <TextView
             android:gravity="right"
             android:padding="3dip"
-            android:text="12.5g"
+            android:text="Male"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
     </TableRow>
 
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:text="Lifestyle"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
     <TableRow>
 
         <TextView
             android:layout_column="1"
             android:padding="3dip"
-            android:text="Salt"
+            android:text="Fitness Level"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
         <TextView
             android:gravity="right"
             android:padding="3dip"
-            android:text="0g"
+            android:text="2"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
     </TableRow>
 
-    <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+    <TableRow>
+
+        <TextView
+            android:layout_column="1"
+            android:padding="3dip"
+            android:text="Taking Medication?"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+        <TextView
+            android:gravity="right"
+            android:padding="3dip"
+            android:text="no"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+    </TableRow>
+
+    <TableRow>
+
+        <TextView
+            android:layout_column="1"
+            android:padding="3dip"
+            android:text="Allergies available?"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+        <TextView
+            android:gravity="right"
+            android:padding="3dip"
+            android:text="yes"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+    </TableRow>
+
+    <TableRow>
+
+        <TextView
+            android:layout_column="1"
+            android:padding="3dip"
+            android:text="Smoking?"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+        <TextView
+            android:gravity="right"
+            android:padding="3dip"
+            android:text="no"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+    </TableRow>
 
 </TableLayout>
