--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -1,151 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.AddFoodActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <data>
+
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        tools:context=".activities.AddFoodActivity">
 
-        <!-- About the food -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimary"
-        android:text="@string/about_the_food"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="72dp"
-        android:fontFamily="@font/roboto"
-        android:textSize="16sp"
-        android:letterSpacing="0.15"
-        android:textStyle="bold"
-        />
-
-        <EditText
-            android:id="@+id/edit_food_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/food_name"
-            android:inputType="text"
-            tools:ignore="Autofill" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edit_brand_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/brand_name"
-            android:inputType="text"
-            tools:ignore="Autofill" />
+            <!-- About the food -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/about_the_food"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="72dp"
+                android:fontFamily="@font/roboto"
+                android:textSize="16sp"
+                android:letterSpacing="0.15"
+                android:textStyle="bold" />
 
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/activity_add_food_spinner_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp">
-        </androidx.appcompat.widget.AppCompatSpinner>
+            <EditText
+                android:id="@+id/edit_food_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/food_name"
+                android:inputType="text"
+                tools:ignore="Autofill" />
 
-        <!-- Nutritional information-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:text="@string/nutritional_information"
-            android:textColor="@color/colorPrimary"
-            android:fontFamily="@font/roboto"
-            android:textSize="16sp"
-            android:letterSpacing="0.15"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/edit_brand_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/brand_name"
+                android:inputType="text"
+                tools:ignore="Autofill" />
 
-        <EditText
-            android:id="@+id/edit_energy_kcal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/energy_kcal"
-            android:inputType="number"
-            tools:ignore="Autofill" />
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/activity_add_food_spinner_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp">
+            </androidx.appcompat.widget.AppCompatSpinner>
 
-        <EditText
-            android:id="@+id/edit_energy_kj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/energy_kj"
-            android:inputType="number"
-            tools:ignore="Autofill" />
+            <!-- Nutritional information-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:text="@string/nutritional_information"
+                android:textColor="@color/colorPrimary"
+                android:fontFamily="@font/roboto"
+                android:textSize="16sp"
+                android:letterSpacing="0.15"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edit_fat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/fat"
-            android:inputType="number"
-            tools:ignore="Autofill" />
+            <EditText
+                android:id="@+id/edit_energy_kcal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/energy_kcal"
+                android:inputType="number"
+                tools:ignore="Autofill" />
 
-        <EditText
-            android:id="@+id/edit_saturates"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/of_which_saturates"
-            android:inputType="number"
-            tools:ignore="Autofill" />
+            <EditText
+                android:id="@+id/edit_energy_kj"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/energy_kj"
+                android:inputType="number"
+                tools:ignore="Autofill" />
 
-        <EditText
-            android:id="@+id/edit_protein"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/protein"
-            android:inputType="number"
-            tools:ignore="Autofill" />
+            <EditText
+                android:id="@+id/edit_fat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/fat"
+                android:inputType="number"
+                tools:ignore="Autofill" />
 
-        <EditText
-            android:id="@+id/edit_carbohydrates"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/carbohydrates"
-            android:inputType="number"
-            tools:ignore="Autofill" />
+            <EditText
+                android:id="@+id/edit_saturates"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/of_which_saturates"
+                android:inputType="number"
+                tools:ignore="Autofill" />
 
-        <EditText
-            android:id="@+id/edit_sugar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/of_which_sugars"
-            android:inputType="number"
-            tools:ignore="Autofill" />
+            <EditText
+                android:id="@+id/edit_protein"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/protein"
+                android:inputType="number"
+                tools:ignore="Autofill" />
 
-        <EditText
-            android:id="@+id/edit_salt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:hint="@string/salt"
-            android:inputType="number"
-            tools:ignore="Autofill" />
-    </LinearLayout>
-</ScrollView>
+            <EditText
+                android:id="@+id/edit_carbohydrates"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/carbohydrates"
+                android:inputType="number"
+                tools:ignore="Autofill" />
+
+            <EditText
+                android:id="@+id/edit_sugar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/of_which_sugars"
+                android:inputType="number"
+                tools:ignore="Autofill" />
+
+            <EditText
+                android:id="@+id/edit_salt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="72dp"
+                android:layout_marginRight="72dp"
+                android:hint="@string/salt"
+                android:inputType="number"
+                tools:ignore="Autofill" />
+        </LinearLayout>
+    </ScrollView>
+</layout>
