--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments_main_activity.FoodFragment">
+    tools:context=".ui.fragments.mainActivity.FoodFragment">
 
     <android:androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
