--- a/app/src/main/res/menu/menu_food.xml
+++ b/app/src/main/res/menu/menu_food.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="hochschule.de.bachelorthesis.activities.FoodActivity">
+    tools:context=".ui.activities.FoodActivity">
     <item
         android:id="@+id/menu_favorite"
         android:orderInCategory="100"
