Updated Me section
- now able to load saved data

--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -54,7 +54,7 @@
 
             <TextView
                 android:id="@+id/fragment_me_height"
-                android:text="@{viewmodel.userAge}"
+                android:text="@{viewmodel.height}"
                 android:gravity="end"
                 android:padding="3dip"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
