--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -8,12 +8,12 @@
 
     <fragment
         android:id="@+id/main_activity_home_fragment"
-        android:name="hochschule.de.bachelorthesis.ui.fragments.mainActivity.HomeFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home"/>
     <fragment
         android:id="@+id/main_activity_food_fragment"
-        android:name="hochschule.de.bachelorthesis.ui.fragments.mainActivity.FoodFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.FoodFragment"
         android:label="MyFoodFragment" >
         <action
             android:id="@+id/action_main_activity_food_fragment_to_addFoodActivity"
@@ -27,17 +27,17 @@
     </fragment>
     <fragment
         android:id="@+id/main_activity_me_fragment"
-        android:name="hochschule.de.bachelorthesis.ui.fragments.mainActivity.MeFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.MeFragment"
         android:label="fragment_me"
         tools:layout="@layout/fragment_me" />
     <fragment
         android:id="@+id/main_activity_graphs_fragment"
-        android:name="hochschule.de.bachelorthesis.ui.fragments.mainActivity.GraphsFragment"
+        android:name="hochschule.de.bachelorthesis.view.fragments.mainActivity.GraphsFragment"
         android:label="fragment_graphs"
         tools:layout="@layout/fragment_graphs" />
     <activity
         android:id="@+id/addFoodActivity"
-        android:name="hochschule.de.bachelorthesis.ui.activities.AddFoodActivity"
+        android:name="hochschule.de.bachelorthesis.view.activities.AddFoodActivity"
         android:label="activity_add_food"
         tools:layout="@layout/activity_add_food" >
         <argument
@@ -47,7 +47,7 @@
     </activity>
     <activity
         android:id="@+id/FoodActivity"
-        android:name="hochschule.de.bachelorthesis.ui.activities.FoodActivity"
+        android:name="hochschule.de.bachelorthesis.view.activities.FoodActivity"
         android:label="activity_food"
         tools:layout="@layout/activity_food" />
 
