--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.AddFoodActivity">
+        tools:context=".view.activities.AddFoodActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
