Renamed some files and changed project structure

--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="hochschule.de.bachelorthesis.view_model.FragmentMeViewModel" />
+            type="hochschule.de.bachelorthesis.view_model.fragments.MeViewModel" />
     </data>
 
     <TableLayout
