--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".view.activities.FoodActivity">
+    tools:context=".view.activities.FoodInfoActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
